unpackaged/main/default/objects/OpportunityLineItem/fields/Adjusted_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_List_Price__c</fullName>
    <formula>((ListPrice / 12) * Term_mo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>