unpackaged/main/default/objects/OpportunityLineItem/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <formula>TEXT(Opportunity.Booking_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Type</label>
    <type>Text</type>
</CustomField>