unpackaged/main/default/objects/OpportunityLineItem/fields/breadwinner_ns__NetSuite_Item_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Item_Internal_Id__c</fullName>
    <description>When the Product Match is done then only this field gets populated</description>
    <formula>PricebookEntry.Product2.breadwinner_ns__NetSuite_Item__r.breadwinner_ns__InternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Item Internal Id</label>
    <type>Text</type>
</CustomField>