unpackaged/main/default/objects/OpportunityLineItem/fields/Business_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Status__c</fullName>
    <formula>Business_Unit__r.BU_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit: Status</label>
    <type>Text</type>
</CustomField>