unpackaged/main/default/objects/OpportunityLineItem/fields/Create_Services_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_Services_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Services Project</label>
    <type>Checkbox</type>
</CustomField>