unpackaged/main/default/objects/OpportunityLineItem/fields/Custom_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Unit_Name__c</fullName>
    <label>Custom Unit: Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>