unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Discount_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Type</label>
    <type>Text</type>
</CustomField>