unpackaged/main/default/objects/OpportunityLineItem/fields/Included_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Included_Unit_Type__c</fullName>
    <label>Included Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>users</fullName>
            </value>
            <value>
                <fullName>apps</fullName>
            </value>
            <value>
                <fullName>user-apps</fullName>
            </value>
            <value>
                <fullName>mobile-mau</fullName>
            </value>
            <value>
                <fullName>service-hours</fullName>
            </value>
            <value>
                <fullName>external-users</fullName>
            </value>
            <value>
                <fullName>external-apps</fullName>
            </value>
            <value>
                <fullName>workflow-gb</fullName>
            </value>
            <value>
                <fullName>orgs</fullName>
            </value>
            <value>
                <fullName>workflow-runs</fullName>
            </value>
            <value>
                <fullName>service-months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>