unpackaged/main/default/objects/OpportunityLineItem/fields/Included_Units__c.field-meta.xml
<CustomField>
    <fullName>Included_Units__c</fullName>
    <label>Included Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>