unpackaged/main/default/objects/OpportunityLineItem/fields/Includes__c.field-meta.xml
<CustomField>
    <fullName>Includes__c</fullName>
    <formula>CASE( Product_Type__c,
 &quot;Platform&quot;,
  IF(
  PricebookEntry.Product2.Unlimited_units__c,
   &quot;Unlimited users&quot;,
   TEXT(Included_Units__c) &amp; &quot; &quot;&amp;  TEXT(Included_Unit_Type__c)  &amp; IF(Unit_Overage_Rate__c &gt;0,&quot; (addl. @ $&quot;&amp; TEXT(Unit_Overage_Rate__c) &amp; &quot;/mo)&quot;,NULL)
  ),
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Includes</label>
    <type>Text</type>
</CustomField>