unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Committed_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Committed_Booking__c</fullName>
    <formula>Opportunity.Is_Committed_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Committed Booking?</label>
    <type>Checkbox</type>
</CustomField>