unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Term__c</fullName>
    <formula>Term_Number__c = Business_Unit__r.Most_Recent_Base_Opportunity__r.Term_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Term?</label>
    <type>Checkbox</type>
</CustomField>