unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Priced_Above_List__c.field-meta.xml
<CustomField>
    <fullName>Is_Priced_Above_List__c</fullName>
    <formula>IF(Booking_Type__c=&quot;Debook&quot;,Discount_Amount__c &lt; 0,Discount_Amount__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Priced Above List?</label>
    <type>Checkbox</type>
</CustomField>