unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Unlimited_Units__c.field-meta.xml
<CustomField>
    <fullName>Is_Unlimited_Units__c</fullName>
    <formula>Product__r.Unlimited_units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unlimited Units?</label>
    <type>Checkbox</type>
</CustomField>