unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Is_Year_1__c</fullName>
    <formula>IF(
ServiceDate &lt; ADDMONTHS(Opportunity.Term_Start_Date__c,12) &amp;&amp; (
End_Date__c = Opportunity.Contract_End_Date__c ||
Term_mo__c &gt;= 12
)
,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Year 1?</label>
    <type>Checkbox</type>
</CustomField>