unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Is_Year_2__c</fullName>
    <formula>IF(
 (
  ServiceDate &lt; ADDMONTHS(Opportunity.Term_Start_Date__c,24) &amp;&amp;
  End_Date__c &gt;= ADDMONTHS(Opportunity.Term_Start_Date__c,12)
 ),
 TRUE,
 FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Year 2?</label>
    <type>Checkbox</type>
</CustomField>