unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Year_3__c.field-meta.xml
<CustomField>
    <fullName>Is_Year_3__c</fullName>
    <formula>IF(
 End_Date__c &gt;= ADDMONTHS(Opportunity.Term_Start_Date__c,24),
 TRUE,
 FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Year 3?</label>
    <type>Checkbox</type>
</CustomField>