unpackaged/main/default/objects/OpportunityLineItem/fields/Manual_Dates__c.field-meta.xml
<CustomField>
    <fullName>Manual_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Dates</label>
    <type>Checkbox</type>
</CustomField>