unpackaged/main/default/objects/OpportunityLineItem/fields/Manual_Term__c.field-meta.xml
<CustomField>
    <fullName>Manual_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Term</label>
    <type>Checkbox</type>
</CustomField>