unpackaged/main/default/objects/OpportunityLineItem/fields/Originating_Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Opportunity Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>