unpackaged/main/default/objects/OpportunityLineItem/fields/Pricing_Commitments_Raw__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Commitments_Raw__c</fullName>
    <label>Pricing Commitments Raw</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>