unpackaged/main/default/objects/OpportunityLineItem/fields/Retool_License__c.field-meta.xml
<CustomField>
    <fullName>Retool_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Retool License to which this product gets provisioned</inlineHelpText>
    <label>Retool License</label>
    <referenceTo>Retool_License__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>