unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <formula>IF(
 ISPICKVAL(Revenue_Type_Override__c,&quot;&quot;),
 IF(
  CONTAINS(TEXT(Opportunity.Subtype__c),&quot;Expansion&quot;),
  IF(Opportunity.Originating_Opportunity__r.Total_ARR__c &gt;  Opportunity.Originating_Opportunity__r.Total_MRR__c  ,&quot;ARR&quot;,&quot;MRR&quot;),
   IF(
    CONTAINS(TEXT(Opportunity.Subtype__c),&quot;Contraction&quot;),
    IF(Opportunity.Originating_Opportunity__r.Total_ARR__c &gt;  Opportunity.Originating_Opportunity__r.Total_MRR__c  ,&quot;ARR&quot;,&quot;MRR&quot;),
    CASE( Opportunity.Subtype__c ,
     &quot;Conversion - Non-Annual to Annual&quot;,&quot;ARR&quot;,
     &quot;Conversion - Self-Service to Annual&quot;,&quot;ARR&quot;,
     &quot;New Commitment - Annual&quot;,&quot;ARR&quot;,
     &quot;New Commitment - Quarterly&quot;,&quot;MRR&quot;,
     &quot;New Commitment - Monthly&quot;,&quot;MRR&quot;,
     &quot;New Commitment - Other&quot;,&quot;MRR&quot;,
     &quot;New Subsidiary - Annual&quot;,&quot;ARR&quot;,
     &quot;Partnership&quot;,&quot;NRR&quot;,
     &quot;Pilot - Paid&quot;,&quot;NRR&quot;,
     &quot;Renewal - Annual&quot;,&quot;ARR&quot;,
     &quot;Renewal - Quarterly&quot;,&quot;MRR&quot;,
     &quot;Renewal - Semi-Annual&quot;,&quot;MRR&quot;,
     &quot;Renewal - Bi-Monthly&quot;,&quot;MRR&quot;,
     &quot;Renewal - Bridge&quot;,&quot;ARR&quot;,
     &quot;Renewal - Monthly&quot;,&quot;MRR&quot;,
     &quot;Renewal - Pilot Conversion&quot;,&quot;ARR&quot;,
     &quot;Renewal - Pilot Extension&quot;,&quot;NRR&quot;,
     &quot;&quot;
    )
   )
  ),
 TEXT(Revenue_Type_Override__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>