unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type_Override__c</fullName>
    <label>Revenue Type (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARR</fullName>
            </value>
            <value>
                <fullName>MRR</fullName>
            </value>
            <value>
                <fullName>NRR</fullName>
            </value>
            <value>
                <fullName>Withholding Tax</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>