unpackaged/main/default/objects/OpportunityLineItem/fields/Security_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Security_Contact_Email__c</fullName>
    <label>Security Contact Email</label>
    <type>Email</type>
</CustomField>