unpackaged/main/default/objects/OpportunityLineItem/fields/Services_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Services_Milestone__c</fullName>
    <label>Services Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>