unpackaged/main/default/objects/OpportunityLineItem/fields/Services_Project_Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Delivery_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Project: Delivery Partner</label>
    <referenceTo>Partner_Relationship__c</referenceTo>
    <relationshipLabel>Opportunity Product (Services Project: Delivery Partner)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>