unpackaged/main/default/objects/OpportunityLineItem/fields/Services_Project_Delivery_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Delivery_Partner_ID__c</fullName>
    <label>Services Project: Delivery Partner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>