unpackaged/main/default/objects/OpportunityLineItem/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <formula>IF(Revenue_Type__c = &quot;NRR&quot;,&quot;Nonrecurring&quot;,
TEXT(PricebookEntry.Product2.Subscription_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type</label>
    <type>Text</type>
</CustomField>