unpackaged/main/default/objects/OpportunityLineItem/fields/Support_Region_Override__c.field-meta.xml
<CustomField>
    <fullName>Support_Region_Override__c</fullName>
    <label>Support Region: Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Regions</valueSetName>
    </valueSet>
</CustomField>