unpackaged/main/default/objects/OpportunityLineItem/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <formula>Opportunity.Term_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>