unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Amount_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Year_1__c</fullName>
    <formula>IF(
 Is_Year_1__c &amp;&amp; Revenue_Type__c != &quot;Ignore&quot;, 
 IF(
   Term_mo__c &lt;= 12,
   TotalPrice,
   (ROUND((ADDMONTHS(Opportunity.Term_Start_Date__c-1,12)-ServiceDate+1)/30.43685,VALUE(TEXT(Term_Precision__c))) / ROUND((End_Date__c-ServiceDate+1)/30.43685,VALUE(TEXT(Term_Precision__c)))) * TotalPrice
  ),
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Year 1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>