unpackaged/main/default/objects/OpportunityLineItem/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <formula>IF(
Subscription_Type__c = &quot;Recurring&quot; &amp;&amp; Revenue_Type__c = &quot;ARR&quot; &amp;&amp; NOT(Opportunity.IsLost__c),
(TotalPrice / Amortization_Term__c) * 12,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>