unpackaged/main/default/objects/OpportunityLineItem/fields/Total_MRR_Ending__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR_Ending__c</fullName>
    <formula>IF(End_Date__c &lt; Opportunity.Contract_End_Date__c,0,Total_MRR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MRR (Ending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>