unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Units_Ending__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Ending__c</fullName>
    <formula>CASE(PricebookEntry.Product2.Product_Type__c,
  &quot;Usage&quot;,Quantity * PricebookEntry.Product2.Unit_Quantity_Factor__c,
  &quot;Platform&quot;,Included_Units__c,
  &quot;Feature&quot;,Included_Units__c,
  &quot;Service&quot;,Quantity * IF(Included_Units__c = 0,1,Included_Units__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units (Ending)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>