unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Units_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Year_2__c</fullName>
    <formula>IF(
  Is_Year_2__c,
  Total_Units_Ending__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units (Year 2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>