unpackaged/main/default/objects/OpportunityLineItem/fields/Usage_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Usage_Billing_Method__c</fullName>
    <label>Usage: Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>