unpackaged/main/default/objects/OpportunityLineItem/fields/Usage_Max_Apps_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Usage_Max_Apps_Per_Month__c</fullName>
    <label>Usage: Max Apps Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>