unpackaged/main/default/objects/OpportunityLineItem/fields/Usage_Pause_Billing_Months__c.field-meta.xml
<CustomField>
    <fullName>Usage_Pause_Billing_Months__c</fullName>
    <label>Usage: Pause Billing Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>