unpackaged/main/default/objects/OpportunityLineItem/validationRules/Start_Date_Matches_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Matches_Opp</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(ServiceDate)) &amp;&amp;
ServiceDate &gt;= Opportunity.Term_Start_Date__c
&amp;&amp;  $User.Is_integration_user__c = FALSE</errorConditionFormula>
    <errorDisplayField>ServiceDate</errorDisplayField>
    <errorMessage>Invalid start date - earlier than opportunity start date</errorMessage>
</ValidationRule>